@@ -1,3 +1,9 @@
+2005-10-05  Jonathan Graehl  <graehl@isi.edu>
+
+	* os.hpp (safe_tmpnam): is_tmpnam_template, throw_last_error
+
+	* Debug.h: default is debug object, not dbg pointer
+
 2005-09-12  Jonathan Graehl  <graehl@isi.edu>
 
 	* align.hpp: renamed ::align to ::align_up (some conflict with a
